Cambios en la paquetización e internacionalización

--- a/spring-jobeet/src/main/resources/messages_es.properties
+++ b/spring-jobeet/src/main/resources/messages_es.properties
@@ -1,7 +1,3 @@
-label.firstname=Nombre
-label.lastname=Apellidos
-label.email=Email
-label.telephone=Tel&eacute;fono
-label.addcontact=A&ntilde;adir contacto
-label.title=Mi agenda Hibernate
-label.footer=&copy; jesuslc.com
+label.askForJob=BUSCA UN TRABAJO
+label.searchPattern=Introduzca alguna palabra clave (ciudad, pais, posici&oacute;n, ...)
+label.resultadoBusqueda=Resultado B&uacute;squeda
