--- a/spring-jobeet/src/main/resources/messages_es.properties
+++ b/spring-jobeet/src/main/resources/messages_es.properties
@@ -1,3 +1,34 @@
 label.askForJob=BUSCA UN TRABAJO
-label.searchPattern=Introduzca alguna palabra clave (ciudad, pais, posici&oacute;n, ...)
+label.searchPattern=Introduzca alguna palabra clave (ciudad, pais, posici\u00F3n, ...)
 label.resultadoBusqueda=Resultado B&uacute;squeda
+select.category=--- Seleccion categor\u00EDa ---
+select.contract=--- Seleccione tipo contrato ---
+type.contract1=S\u00F3lo tarde
+type.contract2=Horario de noche
+type.contract3=Media Jornada
+type.contract4=Jornada Completa
+jobform.button.file=Seleccione un fichero
+jobform.button.save=Guardar
+jobform.button.back=Volver
+jobform.button.reset=Reiniciar
+jobform.label.category=Categor\u00EDa
+jobform.label.type=Tipo
+jobform.label.company=Compa\u00F1\u00EDa
+jobform.label.logo=Logo
+jobform.label.url=Url
+jobform.label.position=Puesto
+jobform.label.description=Description
+jobform.label.location=Localizaci\u00F3n
+jobform.label.HowToApply=C\u00F3mo aplicar
+jobform.label.isPublic=Es p\u00FAblico
+jobform.label.email=Email
+jobform.label.expiresAt=Fecha expiraci\u00F3n
+jobform.error.noCategory=Categor\u00EDa obligatoria
+jobform.error.noType=Tipo de contrato obligatorio
+jobform.error.noCompany=Compa\u00F1\u00EDa obligatoria
+jobform.error.noPosition=Puesto de trabajo obligatorio
+jobform.error.noLocation=Loocalizaci\u00F3n del trabajo obligatorio
+jobform.error.noDescription=Descripci\u00F3n del trabajo obligatorio
+jobform.error.noHowToApply=C\u00F3mo aplicar obligatorio
+jobform.error.noExpiresAt=Fecha de expiraci\u00F3n obligatoria
+jobform.error.ExpiresAtBeforeNow=La fecha de expiraci\u00F3n no puede ser anterior a la actual
