--- a/spring-jobeet/src/main/resources/messages_en.properties
+++ b/spring-jobeet/src/main/resources/messages_en.properties
@@ -1,10 +1,34 @@
-label.firstname=Nombre
-label.lastname=Apellidos
-label.email=Email
-label.telephone=Tel&eacute;fono
-label.addcontact=A&ntilde;adir contacto
-label.title=Mi agenda Hibernate
-label.footer=&copy; jesuslc.com
 label.askForJob=ASK FOR A JOB
 label.searchPattern=Enter some keywords (city, country, position, ...)
 label.resultadoBusqueda=Search result
+select.category=--- Select category ---
+select.contract=--- Select type contact ---
+type.contract1=Only afternoon
+type.contract2=Night times
+type.contract3=Part-time work
+type.contract4=Full-time work
+jobform.button.file=Click to select a file
+jobform.button.save=Save
+jobform.button.back=Back
+jobform.button.reset=Reset
+jobform.label.category=Category
+jobform.label.type=Type
+jobform.label.company=Company
+jobform.label.logo=Logo
+jobform.label.url=Url
+jobform.label.position=Position
+jobform.label.location=Location
+jobform.label.description=Description
+jobform.label.HowToApply=How to apply
+jobform.label.isPublic=Is public
+jobform.label.email=Email
+jobform.label.expiresAt=Expiration Date
+jobform.error.noCategory=Category required
+jobform.error.noType=Type required
+jobform.error.noCompany=Company required
+jobform.error.noPosition=Position required
+jobform.error.noLocation=Location required
+jobform.error.noDescription=Description required
+jobform.error.noHowToApply=How to apply required
+jobform.error.noExpiresAt=Expiration date required
+jobform.error.ExpiresAtBeforeNow=Expiration date can't be earlier today
